# maxbotkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/client_basics/: bot.py
examples/echo_bot/: bot.py
examples/testing_transport/: demo.py
src/maxbotkit/: __init__.py  config.py
src/maxbotkit/_internal/: typing.py
src/maxbotkit/client/: bot.py  transport.py
src/maxbotkit/dispatcher/: dispatcher.py  router.py
src/maxbotkit/exceptions/: api.py  base.py  transport.py
src/maxbotkit/filters/: __init__.py  command.py
src/maxbotkit/methods/: base.py  delete_message.py  edit_message.py  get_chats.py  get_me.py  get_subscriptions.py  get_updates.py  send_message.py
src/maxbotkit/runtime/: polling.py
src/maxbotkit/testing/: __init__.py  transport.py
src/maxbotkit/types/: base.py  chat.py  message.py  subscription.py  update.py  user.py
tests/: test_api_errors.py  test_client_resilience.py  test_command_filter.py  test_config.py  test_delete_message.py  test_dispatcher.py  test_edit_message.py  test_examples_metadata.py  test_get_chats.py  test_get_me.py  test_get_subscriptions.py  test_get_updates.py  test_message_helpers.py  test_polling.py  test_router.py  test_send_message.py  test_serialization.py  test_testing_transport.py  test_transport.py
