[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxbotkit"
version = "0.1.0"
description = "Async Python framework for MAX bots."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "MaxBotKit contributors" },
]
maintainers = [
  { name = "MaxBotKit contributors" },
]
keywords = ["max", "bot", "messenger", "framework", "asyncio"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gussarov/maxbotkit"
Repository = "https://github.com/gussarov/maxbotkit"
Issues = "https://github.com/gussarov/maxbotkit/issues"
Changelog = "https://github.com/gussarov/maxbotkit/releases"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "ruff>=0.11.0",
  "twine>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
